--- a/FirstAssignmentOnTheLMS [Advanced Pandas Exercise].ipynb
+++ b/FirstAssignmentOnTheLMS [Advanced Pandas Exercise].ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
        "4    man        True  NaN  Southampton    no   True  "
       ]
      },
-     "execution_count": 52,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -281,13 +281,13 @@
     "reconstructed_df = pd.concat([df1, df2], axis=0).reset_index(drop=True)\n",
     "\n",
     "# Check if it's the same as the original\n",
-    "print(reconstructed_df.equals(my_df))\n",
+    "print(reconstructed_df.equals(titanic_df))\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -562,7 +562,7 @@
        "[500 rows x 15 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -693,7 +693,7 @@
        "[891 rows x 2 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -775,6 +775,7 @@
        "      <th>embark_town</th>\n",
        "      <th>alive</th>\n",
        "      <th>alone</th>\n",
+       "      <th>PassengerID</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -795,6 +796,7 @@
        "      <td>NaN</td>\n",
        "      <td>yes</td>\n",
        "      <td>True</td>\n",
+       "      <td>61</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>829</th>\n",
@@ -813,6 +815,7 @@
        "      <td>NaN</td>\n",
        "      <td>yes</td>\n",
        "      <td>True</td>\n",
+       "      <td>829</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -823,12 +826,12 @@
        "61          1       1  female  38.0      0      0  80.0      NaN  First   \n",
        "829         1       1  female  62.0      0      0  80.0      NaN  First   \n",
        "\n",
-       "       who  adult_male deck embark_town alive  alone  \n",
-       "61   woman       False    B         NaN   yes   True  \n",
-       "829  woman       False    B         NaN   yes   True  "
+       "       who  adult_male deck embark_town alive  alone  PassengerID  \n",
+       "61   woman       False    B         NaN   yes   True           61  \n",
+       "829  woman       False    B         NaN   yes   True          829  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -840,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -854,6 +857,353 @@
    "source": [
     "missing_count = titanic_df['embark_town'].isna().sum()\n",
     "print(missing_count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PassengerID</th>\n",
+       "      <th>survived</th>\n",
+       "      <th>pclass</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>age</th>\n",
+       "      <th>sibsp</th>\n",
+       "      <th>parch</th>\n",
+       "      <th>fare</th>\n",
+       "      <th>embarked</th>\n",
+       "      <th>class</th>\n",
+       "      <th>who</th>\n",
+       "      <th>adult_male</th>\n",
+       "      <th>deck</th>\n",
+       "      <th>embark_town</th>\n",
+       "      <th>alive</th>\n",
+       "      <th>alone</th>\n",
+       "      <th>PassengerID_left</th>\n",
+       "      <th>PassengerID_right</th>\n",
+       "      <th>Nationality</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>male</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7.2500</td>\n",
+       "      <td>S</td>\n",
+       "      <td>Third</td>\n",
+       "      <td>man</td>\n",
+       "      <td>True</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Southampton</td>\n",
+       "      <td>no</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>British</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>female</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>71.2833</td>\n",
+       "      <td>C</td>\n",
+       "      <td>First</td>\n",
+       "      <td>woman</td>\n",
+       "      <td>False</td>\n",
+       "      <td>C</td>\n",
+       "      <td>Cherbourg</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>False</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>French</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>female</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7.9250</td>\n",
+       "      <td>S</td>\n",
+       "      <td>Third</td>\n",
+       "      <td>woman</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Southampton</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>British</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>female</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>53.1000</td>\n",
+       "      <td>S</td>\n",
+       "      <td>First</td>\n",
+       "      <td>woman</td>\n",
+       "      <td>False</td>\n",
+       "      <td>C</td>\n",
+       "      <td>Southampton</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>False</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>British</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>male</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8.0500</td>\n",
+       "      <td>S</td>\n",
+       "      <td>Third</td>\n",
+       "      <td>man</td>\n",
+       "      <td>True</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Southampton</td>\n",
+       "      <td>no</td>\n",
+       "      <td>True</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>British</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>886</th>\n",
+       "      <td>886</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>male</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>13.0000</td>\n",
+       "      <td>S</td>\n",
+       "      <td>Second</td>\n",
+       "      <td>man</td>\n",
+       "      <td>True</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Southampton</td>\n",
+       "      <td>no</td>\n",
+       "      <td>True</td>\n",
+       "      <td>886</td>\n",
+       "      <td>886</td>\n",
+       "      <td>British</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>887</th>\n",
+       "      <td>887</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>female</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>30.0000</td>\n",
+       "      <td>S</td>\n",
+       "      <td>First</td>\n",
+       "      <td>woman</td>\n",
+       "      <td>False</td>\n",
+       "      <td>B</td>\n",
+       "      <td>Southampton</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>True</td>\n",
+       "      <td>887</td>\n",
+       "      <td>887</td>\n",
+       "      <td>British</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>888</th>\n",
+       "      <td>888</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>female</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>23.4500</td>\n",
+       "      <td>S</td>\n",
+       "      <td>Third</td>\n",
+       "      <td>woman</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Southampton</td>\n",
+       "      <td>no</td>\n",
+       "      <td>False</td>\n",
+       "      <td>888</td>\n",
+       "      <td>888</td>\n",
+       "      <td>British</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>889</th>\n",
+       "      <td>889</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>male</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>30.0000</td>\n",
+       "      <td>C</td>\n",
+       "      <td>First</td>\n",
+       "      <td>man</td>\n",
+       "      <td>True</td>\n",
+       "      <td>C</td>\n",
+       "      <td>Cherbourg</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>True</td>\n",
+       "      <td>889</td>\n",
+       "      <td>889</td>\n",
+       "      <td>French</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>890</th>\n",
+       "      <td>890</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>male</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7.7500</td>\n",
+       "      <td>Q</td>\n",
+       "      <td>Third</td>\n",
+       "      <td>man</td>\n",
+       "      <td>True</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Queenstown</td>\n",
+       "      <td>no</td>\n",
+       "      <td>True</td>\n",
+       "      <td>890</td>\n",
+       "      <td>890</td>\n",
+       "      <td>Irish</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>891 rows × 19 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     PassengerID  survived  pclass     sex   age  sibsp  parch     fare  \\\n",
+       "0              0         0       3    male  22.0      1      0   7.2500   \n",
+       "1              1         1       1  female  38.0      1      0  71.2833   \n",
+       "2              2         1       3  female  26.0      0      0   7.9250   \n",
+       "3              3         1       1  female  35.0      1      0  53.1000   \n",
+       "4              4         0       3    male  35.0      0      0   8.0500   \n",
+       "..           ...       ...     ...     ...   ...    ...    ...      ...   \n",
+       "886          886         0       2    male  27.0      0      0  13.0000   \n",
+       "887          887         1       1  female  19.0      0      0  30.0000   \n",
+       "888          888         0       3  female   NaN      1      2  23.4500   \n",
+       "889          889         1       1    male  26.0      0      0  30.0000   \n",
+       "890          890         0       3    male  32.0      0      0   7.7500   \n",
+       "\n",
+       "    embarked   class    who  adult_male deck  embark_town alive  alone  \\\n",
+       "0          S   Third    man        True  NaN  Southampton    no  False   \n",
+       "1          C   First  woman       False    C    Cherbourg   yes  False   \n",
+       "2          S   Third  woman       False  NaN  Southampton   yes   True   \n",
+       "3          S   First  woman       False    C  Southampton   yes  False   \n",
+       "4          S   Third    man        True  NaN  Southampton    no   True   \n",
+       "..       ...     ...    ...         ...  ...          ...   ...    ...   \n",
+       "886        S  Second    man        True  NaN  Southampton    no   True   \n",
+       "887        S   First  woman       False    B  Southampton   yes   True   \n",
+       "888        S   Third  woman       False  NaN  Southampton    no  False   \n",
+       "889        C   First    man        True    C    Cherbourg   yes   True   \n",
+       "890        Q   Third    man        True  NaN   Queenstown    no   True   \n",
+       "\n",
+       "     PassengerID_left  PassengerID_right Nationality  \n",
+       "0                   0                  0     British  \n",
+       "1                   1                  1      French  \n",
+       "2                   2                  2     British  \n",
+       "3                   3                  3     British  \n",
+       "4                   4                  4     British  \n",
+       "..                ...                ...         ...  \n",
+       "886               886                886     British  \n",
+       "887               887                887     British  \n",
+       "888               888                888     British  \n",
+       "889               889                889      French  \n",
+       "890               890                890       Irish  \n",
+       "\n",
+       "[891 rows x 19 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "titanic_df.join(lookup_table, on='PassengerID', how='inner', lsuffix='_left', rsuffix='_right')"
    ]
   },
   {
