--- a/FirstAssignmentOnTheLMS [Advanced Pandas Exercise].ipynb
+++ b/FirstAssignmentOnTheLMS [Advanced Pandas Exercise].ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -49,7 +49,7 @@
     "#https://github.com/mwaskom/seaborn-data/blob/master/titanic.csv\n",
     "\n",
     "\n",
-    "#5 Python: Pandas - Part 2 - Titanic Dataset 📽️\n",
+    "#5 Python: Pandas - Part 2 - Titanic Dataset 📽️ for a detailed explaination of certain attributes \n",
     "# https://youtu.be/Fg6LpPNR6VY?si=4BI4_whLRR1yGYYZ\n",
     "\n",
     "\n",
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
        "4    man        True  NaN  Southampton    no   True  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -861,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -902,6 +902,7 @@
        "      <th>alive</th>\n",
        "      <th>alone</th>\n",
        "      <th>PassengerID_left</th>\n",
+       "      <th>Date</th>\n",
        "      <th>PassengerID_right</th>\n",
        "      <th>Nationality</th>\n",
        "    </tr>\n",
@@ -926,6 +927,7 @@
        "      <td>no</td>\n",
        "      <td>False</td>\n",
        "      <td>0</td>\n",
+       "      <td>1912-04-10</td>\n",
        "      <td>0</td>\n",
        "      <td>British</td>\n",
        "    </tr>\n",
@@ -948,6 +950,7 @@
        "      <td>yes</td>\n",
        "      <td>False</td>\n",
        "      <td>1</td>\n",
+       "      <td>1912-04-11</td>\n",
        "      <td>1</td>\n",
        "      <td>French</td>\n",
        "    </tr>\n",
@@ -970,6 +973,7 @@
        "      <td>yes</td>\n",
        "      <td>True</td>\n",
        "      <td>2</td>\n",
+       "      <td>1912-04-12</td>\n",
        "      <td>2</td>\n",
        "      <td>British</td>\n",
        "    </tr>\n",
@@ -992,6 +996,7 @@
        "      <td>yes</td>\n",
        "      <td>False</td>\n",
        "      <td>3</td>\n",
+       "      <td>1912-04-13</td>\n",
        "      <td>3</td>\n",
        "      <td>British</td>\n",
        "    </tr>\n",
@@ -1014,11 +1019,13 @@
        "      <td>no</td>\n",
        "      <td>True</td>\n",
        "      <td>4</td>\n",
+       "      <td>1912-04-14</td>\n",
        "      <td>4</td>\n",
        "      <td>British</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -1058,6 +1065,7 @@
        "      <td>no</td>\n",
        "      <td>True</td>\n",
        "      <td>886</td>\n",
+       "      <td>1914-09-13</td>\n",
        "      <td>886</td>\n",
        "      <td>British</td>\n",
        "    </tr>\n",
@@ -1080,6 +1088,7 @@
        "      <td>yes</td>\n",
        "      <td>True</td>\n",
        "      <td>887</td>\n",
+       "      <td>1914-09-14</td>\n",
        "      <td>887</td>\n",
        "      <td>British</td>\n",
        "    </tr>\n",
@@ -1102,6 +1111,7 @@
        "      <td>no</td>\n",
        "      <td>False</td>\n",
        "      <td>888</td>\n",
+       "      <td>1914-09-15</td>\n",
        "      <td>888</td>\n",
        "      <td>British</td>\n",
        "    </tr>\n",
@@ -1124,6 +1134,7 @@
        "      <td>yes</td>\n",
        "      <td>True</td>\n",
        "      <td>889</td>\n",
+       "      <td>1914-09-16</td>\n",
        "      <td>889</td>\n",
        "      <td>French</td>\n",
        "    </tr>\n",
@@ -1146,12 +1157,13 @@
        "      <td>no</td>\n",
        "      <td>True</td>\n",
        "      <td>890</td>\n",
+       "      <td>1914-09-17</td>\n",
        "      <td>890</td>\n",
        "      <td>Irish</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>891 rows × 19 columns</p>\n",
+       "<p>891 rows × 20 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1181,23 +1193,23 @@
        "889        C   First    man        True    C    Cherbourg   yes   True   \n",
        "890        Q   Third    man        True  NaN   Queenstown    no   True   \n",
        "\n",
-       "     PassengerID_left  PassengerID_right Nationality  \n",
-       "0                   0                  0     British  \n",
-       "1                   1                  1      French  \n",
-       "2                   2                  2     British  \n",
-       "3                   3                  3     British  \n",
-       "4                   4                  4     British  \n",
-       "..                ...                ...         ...  \n",
-       "886               886                886     British  \n",
-       "887               887                887     British  \n",
-       "888               888                888     British  \n",
-       "889               889                889      French  \n",
-       "890               890                890       Irish  \n",
+       "     PassengerID_left       Date  PassengerID_right Nationality  \n",
+       "0                   0 1912-04-10                  0     British  \n",
+       "1                   1 1912-04-11                  1      French  \n",
+       "2                   2 1912-04-12                  2     British  \n",
+       "3                   3 1912-04-13                  3     British  \n",
+       "4                   4 1912-04-14                  4     British  \n",
+       "..                ...        ...                ...         ...  \n",
+       "886               886 1914-09-13                886     British  \n",
+       "887               887 1914-09-14                887     British  \n",
+       "888               888 1914-09-15                888     British  \n",
+       "889               889 1914-09-16                889      French  \n",
+       "890               890 1914-09-17                890       Irish  \n",
        "\n",
-       "[891 rows x 19 columns]"
+       "[891 rows x 20 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1215,10 +1227,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   pclass     sex        age       fare\n",
+      "0       1  female  34.611765  9975.8250\n",
+      "1       1    male  41.281386  8201.5875\n",
+      "2       2  female  28.722973  1669.7292\n",
+      "3       2    male  30.740707  2132.1125\n",
+      "4       3  female  21.750000  2321.1086\n",
+      "5       3    male  26.507589  4393.5865\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Alex The Analyst        https://youtu.be/VRmXto2YA2I?si=yLj90KTtj3WRD22c\n",
+    "# groupby_frame = titanic_df.groupby('pclass')\n",
+    "# groupby_frame.mean(numeric_only=True)\n",
+    "grouped = titanic_df.groupby(['pclass', 'sex']).agg({\n",
+    "    'age': 'mean',\n",
+    "    'fare': 'sum'\n",
+    "}).reset_index()\n",
+    "\n",
+    "print(grouped)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1229,10 +1265,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>pclass</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>sex</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>female</th>\n",
+       "      <td>0.968085</td>\n",
+       "      <td>0.921053</td>\n",
+       "      <td>0.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>male</th>\n",
+       "      <td>0.368852</td>\n",
+       "      <td>0.157407</td>\n",
+       "      <td>0.135447</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "pclass         1         2         3\n",
+       "sex                                 \n",
+       "female  0.968085  0.921053  0.500000\n",
+       "male    0.368852  0.157407  0.135447"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# https://youtu.be/ETQXKwM6YMY?si=HO8rUrqzUDaAG5kC\n",
+    "# https://jkarakas.github.io/Exploratory-Analysis-of-the-Titanic-Dataset/Titanic_Dataset_Exploratory_Analysis_No_Code.html?utm_source=chatgpt.com\n",
+    "# https://codesignal.com/learn/courses/intro-to-data-visualization-with-titanic/lessons/deep-exploration-of-the-titanic-dataset-features-and-characteristics?utm_source=chatgpt.com\n",
+    "\n",
+    "# Create the pivot table\n",
+    "survival_rates = titanic_df.pivot_table(values='survived', index='sex', columns='pclass', aggfunc='mean')\n",
+    "\n",
+    "survival_rates"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1243,10 +1349,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Date\n",
+       "1912-04    10\n",
+       "1912-05    12\n",
+       "1912-06    13\n",
+       "1912-07     9\n",
+       "1912-08     8\n",
+       "1912-09     7\n",
+       "1912-10    11\n",
+       "1912-11    12\n",
+       "1912-12    10\n",
+       "1913-01    14\n",
+       "1913-02    17\n",
+       "1913-03    14\n",
+       "1913-04    13\n",
+       "1913-05    12\n",
+       "1913-06    14\n",
+       "1913-07    11\n",
+       "1913-08     9\n",
+       "1913-09    13\n",
+       "1913-10    13\n",
+       "1913-11    14\n",
+       "1913-12    12\n",
+       "1914-01    11\n",
+       "1914-02     8\n",
+       "1914-03    15\n",
+       "1914-04    10\n",
+       "1914-05    12\n",
+       "1914-06     9\n",
+       "1914-07    12\n",
+       "1914-08    11\n",
+       "1914-09     6\n",
+       "Freq: M, Name: survived, dtype: int64"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Step 1: Create a date range starting from 1912-04-10\n",
+    "titanic_df['Date'] = pd.date_range(start=\"1912-04-10\", periods=len(titanic_df), freq=\"D\")\n",
+    "\n",
+    "# Step 2: Convert Date column to datetime (already datetime, but just to be sure)\n",
+    "titanic_df['Date'] = pd.to_datetime(titanic_df['Date'])\n",
+    "\n",
+    "# Step 3: Group by year-month and survival count\n",
+    "monthly_survival = titanic_df.groupby(titanic_df['Date'].dt.to_period(\"M\"))['survived'].sum()\n",
+    "\n",
+    "monthly_survival"
+   ]
   }
  ],
  "metadata": {
